name:                advent2019
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/advent2019#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable advent2019
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       IntCode, Day01, Day02, Day03, Day04, Day05, Day06, Day07, Day08, Day09, Day11, Day12, Day13
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, split, containers 
